--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,8 @@
+title: QuantumMenace
+description: Analyzing postquantum applications for TLS and SSL
+google_analytics: 
+show_downloads: true
 theme: jekyll-theme-hacker
+
+gems:
+  - jekyll-mentions
